overlays/prod/ingress-local.yaml
# overlays/prod/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: 529-ca-issuer
    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: guestbook-ingress-local
  namespace: guestbook
spec:
  ingressClassName: nginx
  rules:
  - host: guestbook.529.local
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - guestbook.529.local
    secretName: 529-ca-issuer-guestbook
