overlays/prod/ingress.yaml
# overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  #namespace: guestbook
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - guestbook.k3s.org 
    secretName: letsencrypt-prod-guestbook
  rules:
  - host: guestbook.k3s.org
    http:
      paths:
      - backend:
          service:
            name: frontend
            port: 
              number: 80
        pathType: ImplementationSpecific
